Fix local server issues - remove unicode chars and add debug logging

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flight Search - Find Your Perfect Flight v3.1</title>
+    <title>Flight Search</title>
     <style>
         * {
             margin: 0;
